<resources>
    <string name="app_name">QuizApp</string>
    <string name="title_q_1">Question 1</string>
    <string name="content_q_1">Where would you choose to live?</string>
    <string name="option_q_1_1">Near the sea</string>
    <string name="option_q_1_2">On the hill</string>
    <string name="option_q_1_3">In a big city</string>
    <string name="option_q_1_4">In a farm</string>
    <string name="option_q_1_5">In a jungle</string>
    <string name="title_q_2">Question 2</string>
    <string name="content_q_2">If you are going on holidays, when do you feel most happy? </string>
    <string name="option_q_2_1">One day before leaving</string>
    <string name="option_q_2_2">When everybody has fun together</string>
    <string name="option_q_2_3">When talking</string>
    <string name="option_q_2_4">When leaving and when coming back home</string>
    <string name="option_q_2_5">When eating</string>
    <string name="title_q_3">Question 3</string>
    <string name="content_q_3">what do you think when you have dreamed about achieving something?</string>
    <string name="option_q_3_1">I will achieve it in reality.</string>
    <string name="option_q_3_2">My effort will be paid off.</string>
    <string name="option_q_3_3">I will fail.</string>
    <string name="option_q_3_4">Only success in a dream, so what?</string>
    <string name="option_q_3_5">No special meaning.</string>
    <string name="title_q_4">Question 4</string>
    <string name="content_q_4">There are lots of different dishes on the dining table. What do you want to eat first?</string>
    <string name="option_q_4_1">Soup or curry</string>
    <string name="option_q_4_2">Rice or bread</string>
    <string name="option_q_4_3">Salad</string>
    <string name="option_q_4_4">Vegetables</string>
    <string name="option_q_4_5">Dessert or fruits</string>
    <string name="title_q_5">Question 5</string>
    <string name="content_q_5">What do you think when you see a beautiful sunset?</string>
    <string name="option_q_5_1">Wow! How beautiful.</string>
    <string name="option_q_5_2">Oh! How sad.</string>
    <string name="option_q_5_3">Nice weather.</string>
    <string name="option_q_5_4">I want to shout as loud as I can.</string>
    <string name="option_q_5_5">Tomorrow I must try harder.</string>
</resources>
